Cleanup and some minor corrections

--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 MHutils-1.0.0   Oct 23, 2014
 =============================
 Various utilities I found useful that are needed on a regular basis. 
-Not really meant to be specific to any project. Just s#$! that comes up 
-on a very regular basis.
+Not really meant to be specific to any project. Just stuff that comes up 
+on a regular basis.
 
 Also the dumping ground for a bunch of various utils that don't fit 
 anywhere.
